# DP-Kernels

./: .gitignore  .gitmodules  LICENSE  README.md  dep.sh  loc.sh  meson.build  run.sh
Apps/DuckDB/: README.md  client.cpp  config.sh  meson.build  re2_regex_app.cpp  re2_regex_app.h  regex_client.cpp  server.cpp  setup.sh  socket.cpp  socket.hpp
Apps/DuckDB/DDS/: README.md
Apps/DuckDB/DDS/Common/Include/: DDSChannelDefs.h  DDSTypes.h  MsgTypes.h  Protocol.h
Apps/DuckDB/DDS/Common/Include/DPU/: BackEndTypes.h  CacheTable.h  FileService.h
Apps/DuckDB/DDS/Common/Include/Host/: BackEndBridge.h  DDSFrontEndInterface.h  DMABuffer.h  LinkedList.h  RingBufferProgressive.h
Apps/DuckDB/DDS/Common/Source/DPU/: FileService.c  RingBufferPolling.c
Apps/DuckDB/DDS/Common/Source/Host/: BackEndBridge.cpp  DMABuffer.cpp  LinkedList.cpp  Profiler.cpp  RingBufferProgressive.cpp
Apps/DuckDB/DDS/Scripts/: CountLoC.sh
Apps/DuckDB/DDS/StorageEngine/BackEndLib/: BackEndLib.vcxproj
Apps/DuckDB/DDS/StorageEngine/DDSApplication/: DDSApplication.cpp  DDSApplication.vcxproj
Apps/DuckDB/DDS/StorageEngine/DDSApplicationLinux/: DDSApplication.cpp  DDSEvent.cpp  DDSEvent.h  meson.build
Apps/DuckDB/DDS/StorageEngine/DDSBackEndDPUService/: SpdkDev.json.nvmf  meson.build
Apps/DuckDB/DDS/StorageEngine/DDSBackEndDPUService/Include/: DPKEmbedShim.h  DPUBackEnd.h  DPUBackEndDir.h  DPUBackEndFile.h  DPUBackEndStorage.h  DataPlaneHandlers.h  FileBackEnd.h  Zmalloc.h  bdev.h
Apps/DuckDB/DDS/StorageEngine/DDSBackEndDPUService/Source/: ControlPlaneHandlers.c  DPUBackEndFile.c  DPUBackEndStorage.c  DataPlaneHandlers.c  FileBackEnd.c  Main.c  Zmalloc.c
Apps/DuckDB/DDS/StorageEngine/DDSFrontEnd/: DDSBackEndBridge.cpp  DDSBackEndBridge.h  DDSBackEndBridgeBase.h  DDSBackEndBridgeForLocalMemory.cpp  DDSBackEndBridgeForLocalMemory.h  DDSFile.cpp  DDSFile.h  DDSFrontEnd.cpp  DDSFrontEnd.h  DDSFrontEndTypes.h
Apps/DuckDB/DDS/StorageEngine/DDSPosixInterface/: DDSPosix.cpp  DDSPosix.h  DDSPosixTypes.h  README.md  meson.build
Apps/DuckDB/DDS/StorageEngine/DDSPosixInterface/test/: 4K-16Btag.deflate.encrypted  4K.deflate  4K.deflate.encrypted  4K.txt  benchmarking.cpp  concurrent_dds_posix_tests.cpp  meson.build  run_until_failed_line_333.sh  simple_dds_posix_tests.cpp  test_compile.cpp
Apps/DuckDB/DuckDB-DPK/: .gitignore  CMakeLists.txt  gendb-no-decomp.sh  gendb-no-decrypt-decomp.sh  gendb-no-decrypt.sh  gendb-test.sh  gendb.sh  run_tpch.sh  setup_parquet.sh
Apps/DuckDB/DuckDB-DPK/RegexIntegration/: README.md  bf3_regex_app.cpp  bf3_regex_app.h  run.sh  server.cpp  socket.hpp
Apps/DuckDB/DuckDB-DPK/RegexIntegration/NetworkEngine/: Build.sh  DDSPipeline.json  README.md  Run.sh  Setup.sh  meson.build
Apps/DuckDB/DuckDB-DPK/RegexIntegration/NetworkEngine/Include/: DDSBOWCore.h  DDSBOWPipeline.h  DDSTrafficDirecting.h  PEPOTLDKTCP.h  PacketProcessor.h
Apps/DuckDB/DuckDB-DPK/RegexIntegration/NetworkEngine/Patches/: dpdk_utils.c
Apps/DuckDB/DuckDB-DPK/RegexIntegration/NetworkEngine/Source/: ActionModifyHeaders.c  DDSBOWCore.c  (+6 more)
Apps/DuckDB/DuckDB-DPK/extension/parquet/: column_reader.cpp  parquet_crypto.cpp  parquet_metadata.cpp  parquet_reader.cpp
Apps/DuckDB/DuckDB-DPK/scripts/: generate_metric_enums.py
Apps/DuckDB/DuckDB-DPK/src/: CMakeLists.txt
Apps/DuckDB/DuckDB-DPK/src/common/: CMakeLists.txt  dds_posix_debug.cpp  enum_util.cpp  file_system.cpp  local_file_system.cpp
Apps/DuckDB/DuckDB-DPK/src/main/: client_context.cpp  profiling_info.cpp  query_profiler.cpp
Apps/DuckDB/DuckDB-DPK/src/planner/: table_filter_state.cpp
Apps/DuckDB/DuckDB-DPK/tools/: CMakeLists.txt
Apps/DuckDB/DuckDB-DPK/tools/utils/: dds_parquet_loader.cpp  extract_profiles_to_csv.py  extract_profiles_to_csv_mixed_pread2.py  rdma_query_client.cpp  rdma_query_server.cpp  rdma_query_transport.cpp  rdma_query_transport.hpp  throughput.csv
Apps/DuckDB/DuckDB-DPK/tpch_profiles/: extract_profiles_to_csv.py
Apps/DuckDB/Parser/: meson.build  re2_test.cpp
Apps/DuckDB/Parser/src/: common.hpp  interface.cpp  interface.h
Apps/DuckDB/Parser/src/database/: database.cpp
Apps/DuckDB/Parser/src/table/: table.cpp
Apps/ElbaPort/: meson.build
Apps/ElbaPort/Common/: common.hpp  doca_common_v_2_2.c
Apps/ElbaPort/DPManager/: dp_manager.cpp  dp_manager.hpp  dp_manager_msgq.cpp  dpm_interface.cpp  kernel_interface.cpp  memory.cpp  memory_common.hpp
Apps/ElbaPort/DPManager/device/: device_common.hpp
Apps/ElbaPort/DPManager/device/bf2/: bf2_common.hpp  bf2_device.cpp
Apps/ElbaPort/DPManager/device/bf3v2.2/: bf3v2.2_device.cpp
Apps/ElbaPort/DPManager/device/elba/: elba_device.cpp
Apps/ElbaPort/Kernels/bf3v2.2/: decompress_deflate_bf3v2.2.cpp
Apps/ElbaPort/Kernels/sw/: decompress_deflate_sw.cpp  decompress_deflate_sw.hpp  regex_sw.cpp
Apps/Faster/: benchmark-dds.cc  build-faster.sh  client.cpp  common.hpp  dpu_app.cpp  dpu_app.hpp  faster_bench_common.hpp  file_helper.hpp  helpers.cpp  helpers.hpp  latency_helpers.hpp  meson.build  rdma_comm.cpp  rdma_comm.hpp  server.cpp  server.hpp
Apps/Faster/Include/: Config.h  LatencyHelpers.h
Apps/MessageExchange/SpinLockBuffer/: CMakeLists.txt  README.md  buffer.cpp  buffer.hpp  main.cpp  spinlock.hpp  types.hpp
Apps/Storage/: meson.build  page_server.cpp  page_server.hpp  server.cpp  types.hpp
DPManager/: coalescing.cpp  coalescing.hpp  common.hpp  dp_manager.hpp  dp_manager_msgq.cpp  dp_manager_msgq.hpp  dpk_embed_c_api.cpp  dpk_embed_c_api.h  dpm_interface.cpp  dpm_interface.hpp  executor.cpp  executor.hpp  kernel_interface.cpp  kernel_interface.hpp  main.cpp  memory.cpp  memory.hpp  memory_common.hpp  meson.build  mpmc_queue.hpp  queue.cpp  queue.hpp  ring_buffer.cpp  ring_buffer.hpp  scheduling.cpp  scheduling.hpp
DPManager/device/: device_specific.cpp  device_specific.hpp
DPManager/device/bf2/: bf2_device.cpp  bf2_device.hpp
DPManager/device/bf3/: bf3_device.cpp  bf3_device.hpp
DPManager/device/bf3v2.2/: bf3v2.2_common.hpp  bf3v2.2_device.cpp  bf3v2.2_device.hpp
DPManager/device/elba/: elba_device.hpp
DPManager/device/sw/: sw_device.cpp  sw_device.hpp
(+113 files in other folders)
